GNOME Bugzilla – Bug 775944
Wrong introspection data for gst_event_new_select_streams and gst_event_parse_select_streams
Last modified: 2016-12-15 09:07:38 UTC
The list of streams arguments of gst_event_new_select_streams and gst_event_parse_select_streams (of type GLib*) are both annotated as (element-type gchar), but the proper annotation should be (element-type utf8), since afaict the elements of the GList are pointers to strings. (This is assuming that the stream ids are proper utf8, not sure if this is the case.) This is affecting the Haskell bindings (and possibly any other statically typed bindings), see https://github.com/haskell-gi/haskell-gi/issues/68
Makes sense. Are you planning on making a patch ? :) Strings in GStreamer should always be UTF-8.
Created attachment 341932 [details] [review] Patch fixing the introspection data
Sure, done! :)
Thanks, pushed: commit 9cdacefa98c9feea77e21a9aca043c9354f2f69d Author: Iñaki García Etxebarria <garetxe@gmail.com> Date: Wed Dec 14 06:56:55 2016 +0100 g-i: Fix annotations for gst_event_new_select_streams() and gst_event_parse_select_streams() A gchar is not a string. https://bugzilla.gnome.org/show_bug.cgi?id=775944 (Should probably also be picked into 1.10 branch)
Thanks!