g-i: Fix annotations for gst_event_new_select_streams() and gst_event_parse_select_streams()

A gchar is not a string.

https://bugzilla.gnome.org/show_bug.cgi?id=775944